@@ -69,6 +69,7 @@ monster_ai: 0
 // 1: Enable mob-warping when standing on NPC-warps
 // 2: Enable mob-warping when standing on Priest Warp Portals
 // 4: Disable warping when the target map is a 'nobranch' map.
+// 8: Enable mob-warping when standing on Dimensional Doors Portals.
 mob_warp: 0
 
 // If these are set above 0, they define the time (in ms) during which monsters
